🌟 Add challenge repo

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-js"
     testImplementation "org.jetbrains.kotlin:kotlin-test-js"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.0"
 }
 
 kotlin {
